fixed alignment

--- a/styles/styles-ar.css
+++ b/styles/styles-ar.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Almarai:wght@300;800&display=swap");
 
-* {
+body {
   font-family: "Almarai", sans-serif;
 }
 
@@ -19,19 +19,17 @@ h3,
   letter-spacing: 0;
 }
 
+article,
+.credit {
+  text-align: right;
+}
+
 #highlight {
   font-weight: 800;
   font-style: normal;
 }
 
-.downloads {
-  flex-direction: row-reverse;
-}
-
+.downloads,
 .about-section {
   flex-direction: row-reverse;
-}
-
-.credit {
-  text-align: right;
 }
